# ASR5_MiniProjet

./: .gitignore  CMakeLists.txt  README.txt  creationLib.sh  makefile  startServeruAndClient.sh
doc/: Doxyfile
doc/html/: annotated.html  classes.html  client_2doc_main_page_8h_source.html  creat_connexion_8h_source.html  creation_report_8h_source.html  dir_304fdb685479ef838539f04d51ef3217.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_6908ff505388a07996d238c763adbdab.html  dir_6908ff505388a07996d238c763adbdab.js  dir_f97fbe0b90da9da95216278fe5d47688.html  dir_f97fbe0b90da9da95216278fe5d47688.js  doc_main_page_8h_source.html  doxygen.css  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  group__client.html  group__main.html  group__main.js  group__serveur.html  group__sock_lib.html  group__sock_lib.js  group__usual_fct.html  group__usual_fct.js  header_client_8h.html  header_client_8h.js  header_client_8h_source.html  header_serveur_8h_source.html  index.html  jquery.js  modules.html  modules.js  navtreedata.js  navtreeindex0.js  socklib_8h.html  socklib_8h.js  (+7 more)
doc/latex/: annotated.tex  dir_304fdb685479ef838539f04d51ef3217.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_6908ff505388a07996d238c763adbdab.tex  dir_f97fbe0b90da9da95216278fe5d47688.tex  files.tex  group__client.tex  group__main.tex  group__serveur.aux  group__serveur.tex  group__sock_lib.aux  group__sock_lib.tex  group__usual_fct.aux  group__usual_fct.tex  header_client_8h.tex  (+12 more)
src/: docMainPage.h
(+61 files in other folders)
